manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bakseter-no
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: web
  type: ClusterIP
