manifests/backendsecuritypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit
  namespace: bakseter-no
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bakseter-no

  rateLimit:
    local:
      rules:
        - limit:
            requests: 1200
            unit: Minute
