manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bakseter-no
  namespace: bakseter-no
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflared
      namespace: cloudflared

  hostnames:
    - bakseter.no

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ''
          kind: Service
          name: bakseter-no
          port: 80
          weight: 1
