manifests/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bakseter-no
  namespace: bakseter-no
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: cloudflared
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
          rules:
            http:
              - method: 'GET|HEAD'
                path: '/'
              - method: 'GET|HEAD'
                path: '/(favicon\.ico|feed\.xml|status)'
              - method: 'GET|HEAD'
                path: '/css/[a-z0-9._-]+\.css'
              - method: 'GET|HEAD'
                path: '/blog/?'
              - method: 'GET|HEAD'
                path: '/blog/[a-z0-9-]+/?'
              - method: 'GET|HEAD'
                path: '/[a-zA-Z0-9._-]+\.(pdf|png|jpg|webp|svg)'

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchName: 'alloy.monitoring.svc.cluster.local'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: '4317'
              protocol: TCP
